🍰👶 Checkpoint ./medium.html:43031560/1339 ./index.html:43031560/19 ./medium.css:43031560/1380 ./medium.js:43031560/2849 ./mwell.html:43031560/1319 ./mwell.css:43031560/1380 ./mwell.js:43031560/2843

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <a href="rare.html">Rare</a>
 </button>
 <button id="btn">
-    <a href="Medium/medium.html">Medium</a>
+    <a href="medium.html">Medium</a>
 </button>
 <button id="btn">
-    <a href="Medium_Well/mwell.html">Medium Well</a>
+    <a href="mwell.html">Medium Well</a>
 </button>
 
     </div>
