--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Steak_timer</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -14,13 +14,13 @@
 
     <div id="btnsteak">
 <button id="btn">
-    <a href="rare.html">Rare</a>
+    <a href="RARE/Rare.html">Rare</a>
 </button>
 <button id="btn">
-    <a href="medium.html">Medium</a>
+    <a href="Medium/medium.html">Medium</a>
 </button>
 <button id="btn">
-    <a href="mwell.html">Medium Well</a>
+    <a href="Medium_Well/mwell.html">Medium Well</a>
 </button>
 
     </div>
