--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 
     <div id="btnsteak">
 <button id="btn">
-    <a href="RARE/Rare.html">Rare</a>
+    <a href="rare.html">Rare</a>
 </button>
 <button id="btn">
-    <a href="Medium/medium.html">Medium</a>
+    <a href="medium.html">Medium</a>
 </button>
 <button id="btn">
-    <a href="Medium_Well/mwell.html">Medium Well</a>
+    <a href="mwell.html">Medium Well</a>
 </button>
 
     </div>
