🎏✨ Checkpoint ./rare.html:43031560/20 ./mwell.html:43031560/20 ./medium.html:43031560/20

--- a/mwell.html
+++ b/mwell.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   
-    <audio id="myAudio" src="https://cdn.glitch.global/3bf7bbc0-1174-4363-8d2c-988de7822b82/biper-elektronnyiy-biper-ugasanie-26700.mp3?v=1661240066500"  autoplay="allowed"></audio>
+    <audio id="myAudio" src="https://cdn.glitch.global/3bf7bbc0-1174-4363-8d2c-988de7822b82/biper-elektronnyiy-biper-ugasanie-26700.mp3?v=1661240066500"></audio>
 
 
 
